--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
 
 			document.body.appendChild( texture );
 
+			//
+
+			var texture = new TG.Texture( 256, 256 )
+				.add( new TG.Rect().set( 50, 20, 200, 150 ) )
+				.toCanvas();
+
+			document.body.appendChild( texture );
+
 		</script>
 	</body>
 </html>
