Renamed Checkboard to CheckerBoard and replaced dx,dy,rowShift with size and offset.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			//
 
 			var texture = new TG.Texture( 256, 256 )
-				.add( new TG.Checkboard() )
+				.add( new TG.CheckerBoard() )
 				.toCanvas();
 
 			document.body.appendChild( texture );
