Replaced Rect's left, top, right, bottom with position and size.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 			//
 
 			var texture = new TG.Texture( 256, 256 )
-				.add( new TG.Rect().set( 50, 20, 200, 150 ) )
+				.add( new TG.Rect().position( 50, 20 ).size( 150, 130 ) )
 				.toCanvas();
 
 			document.body.appendChild( texture );
