--- a/waves.html
+++ b/waves.html
@@ -7,76 +7,77 @@
 		<style>
 			body {
 				margin: 20px;
-        background: #111;
-			}
-			canvas {
-				margin-right: 20px;
+				background: #111;
 			}
 		</style>
 	</head>
 	<body>
 		<script src="src/texgen.js"></script>
 		<script>
-    var size = 350;
 
-    var canvas = document.createElement("canvas");
-    canvas.height = size;
-    canvas.width = size * 3;
-	  document.body.appendChild( canvas );
-    var context = canvas.getContext("2d");
+			var i = 0;
+			var size = 300;
 
-    loop(step);
+			var canvas = document.createElement("canvas");
+			canvas.width = size * 3;
+			canvas.height = size;
+			document.body.appendChild( canvas );
 
-    var i = 0;
-    function step() {
-      i++;
+			var context = canvas.getContext("2d");
 
-			var texture = new TG.Texture( size, size )
-				.add( new TG.SinX().frequency( 0.05+i/1000 ) )
-				.mul( new TG.SinX().frequency( 0.08-i/2000 ) )
-				.add( new TG.SinY().frequency( 0.05-i/1000 ) )
-				.mul( new TG.SinY().frequency( 0.08+i/2000 ) )
-				.div( new TG.Number().color( 1, 2, 1 ) )
-				.add( new TG.SinX().frequency( 0.003 ).color( 0.5, 0, 0 ) )
-				.toImageData(context);
+			animate();
 
-      context.putImageData( texture, 0, 0 );
+			function render() {
 
-			//
+				var texture = new TG.Texture( size, size )
+					.add( new TG.SinX().frequency( 0.05+i/1000 ) )
+					.mul( new TG.SinX().frequency( 0.08-i/2000 ) )
+					.add( new TG.SinY().frequency( 0.05-i/1000 ) )
+					.mul( new TG.SinY().frequency( 0.08+i/2000 ) )
+					.div( new TG.Number().color( 1, 2, 1 ) )
+					.add( new TG.SinX().frequency( 0.003 ).color( 0.5, 0, 0 ) )
+					.toImageData(context);
 
-			var texture = new TG.Texture( size, size )
-				.add( new TG.SinX().frequency( 0.066 + 0.05*Math.sin(i/100) ) )
-				.add( new TG.SinY().frequency( 0.066 + 0.05*Math.sin(i/100) ) )
-				.mul( new TG.SinX().offset( 32 ).frequency( 0.044 + 0.09*Math.sin(i/100) ).color( 2, 2, 2 ) )
-				.mul( new TG.SinY().offset( 16 ).frequency( 0.044 + 0.09*Math.sin(i/100) ).color( 2, 2, 2 ) )
-				.sub( new TG.Number().color( 0.5, 2, 4 ) )
-				.toImageData(context);
+				context.putImageData( texture, 0, 0 );
 
-      context.putImageData( texture, size, 0 );
+				//
 
-			//
+				var texture = new TG.Texture( size, size )
+					.add( new TG.SinX().frequency( 0.066 + 0.05*Math.sin(i/100) ) )
+					.add( new TG.SinY().frequency( 0.066 + 0.05*Math.sin(i/100) ) )
+					.mul( new TG.SinX().offset( 32 ).frequency( 0.044 + 0.09*Math.sin(i/100) ).color( 2, 2, 2 ) )
+					.mul( new TG.SinY().offset( 16 ).frequency( 0.044 + 0.09*Math.sin(i/100) ).color( 2, 2, 2 ) )
+					.sub( new TG.Number().color( 0.5, 2, 4 ) )
+					.toImageData(context);
 
-			var texture = new TG.Texture( size, size )
-				.add( new TG.SinX().frequency( 0.004 + 0.002*Math.sin(i/100)) )
-				.mul( new TG.SinY().frequency( 0.004  + 0.002*Math.sin(i/100)) )
-				.mul( new TG.SinX().offset( 32 ).frequency( 0.04 + 0.02*Math.sin(i/100) ) )
-				.mul( new TG.SinY().offset( 32 ).frequency( 0.04 + 0.02*Math.sin(i/100) ) )
-				.div( new TG.SinX().frequency( 0.02 ).color( 5, 4, 3 ) )
-				.mul( new TG.SinX().frequency( 0.003 ).color( 0.5, 0, 0 ) )
-				.add( new TG.Noise().color( 0.1, 0, 0 ) )
-				.add( new TG.Noise().color( 0, 0.1, 0 ) )
-				.add( new TG.Noise().color( 0, 0, 0.1 ) )
-				.toImageData(context);
+				context.putImageData( texture, size, 0 );
 
-      context.putImageData( texture, size * 2, 0 );
-    };
+				//
 
-    function loop(f) {
-      f();
-      requestAnimationFrame(function() {
-        loop(f);
-      });
-    };
+				var texture = new TG.Texture( size, size )
+					.add( new TG.SinX().frequency( 0.004 + 0.002*Math.sin(i/100)) )
+					.mul( new TG.SinY().frequency( 0.004	+ 0.002*Math.sin(i/100)) )
+					.mul( new TG.SinX().offset( 32 ).frequency( 0.04 + 0.02*Math.sin(i/100) ) )
+					.mul( new TG.SinY().offset( 32 ).frequency( 0.04 + 0.02*Math.sin(i/100) ) )
+					.div( new TG.SinX().frequency( 0.02 ).color( 5, 4, 3 ) )
+					.mul( new TG.SinX().frequency( 0.003 ).color( 0.5, 0, 0 ) )
+					.add( new TG.Noise().color( 0.1, 0, 0 ) )
+					.add( new TG.Noise().color( 0, 0.1, 0 ) )
+					.add( new TG.Noise().color( 0, 0, 0.1 ) )
+					.toImageData(context);
+
+				context.putImageData( texture, size * 2, 0 );
+
+				i++;
+
+			}
+
+			function animate() {
+
+				requestAnimationFrame( animate );
+				render();
+
+			}
 
 		</script>
 	</body>
