--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
 			//
 			
 			var texture = new TG.Texture( 256, 256 )
-				.add( new TG.CheckerBoard().rowShift(10) )
-				.pass( new TG.SineDistort())
+				.add( new TG.CheckerBoard().rowShift( 10 ) )
+				.pass( new TG.SineDistort().sines( 8, 10 ).amplitude( 20, 30))
 				.toCanvas();
 
 			document.body.appendChild( texture );
