--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 			//
 
 			var texture = new TG.Texture( 256, 256 )
-				.add( new TG.Circle().position( 128, 128 ).radius( 80 ).delta( 80 ).color(0.25,0.25,1) )
-				.add( new TG.Circle().position( 128, 128 ).radius( 120 ).delta( 2 ) )
+				.add( new TG.CheckerBoard().size( 10, 10 ).color( 0.5, 0, 0 ) )
+				.pass( new TG.Twirl().radius( 128 ).strength ( 80 ) )
 				.toCanvas();
 
 			document.body.appendChild( texture );
