--- a/index.html
+++ b/index.html
@@ -148,6 +148,14 @@
 			//
 
 			var texture = new TG.Texture( 256, 256 )
+			.add( new TG.Circle().position( 128, 128 ).radius( 64 ) )
+			.toCanvas();
+
+			document.body.appendChild( texture );
+
+			//
+
+			var texture = new TG.Texture( 256, 256 )
 				.add( new TG.CheckerBoard().size( 10, 10 ).color( 0.5, 0, 0 ) )
 				.pass( new TG.Twirl().radius( 128 ).strength ( 80 ) )
 				.toCanvas();
