--- a/examples/index.html
+++ b/examples/index.html
@@ -175,7 +175,7 @@
 
 			var texture = new TG.Texture( 256, 256 )
 			.add( new TG.Circle().position( 128, 128 ).radius( 64 ).delta( 60 ) )
-			.pass( new TG.Pixelate().pixelSize( 8, 8 ) )
+			.pass( new TG.Pixelate().size( 8, 8 ) )
 			.toCanvas();
 
 			document.body.appendChild( texture );
