--- a/examples/index.html
+++ b/examples/index.html
@@ -20,10 +20,10 @@
 
 			var texture = new TG.Texture( 256, 256 )
 				.add( new TG.XOR().color( 1, 0.5, 0.7 ) )
-				.add( new TG.SinX().frequency( 0.004 ).color( 0.5, 0, 0 ) )
-				.mul( new TG.SinY().frequency( 0.004 ).color( 0.5, 0, 0 ) )
+				.add( new TG.SinX().frequency( 0.004 ).color( 0.25, 0, 0 ) )
+				.sub( new TG.SinY().frequency( 0.004 ).color( 0.25, 0, 0 ) )
 				.add( new TG.SinX().frequency( 0.0065 ).color( 0.1, 0.5, 0.2 ) )
-				.add( new TG.SinY().frequency( 0.0065 ).color( 0.5, 0.5, 0.5 ) )
+				.add( new TG.SinY().frequency( 0.0065 ).color( 0, 0.4, 0.5 ) )
 				.add( new TG.Noise().color( 0.1, 0.1, 0.2 ) )
 				.toCanvas();
 
@@ -113,10 +113,8 @@
 			var texture = new TG.Texture( 256, 256 )
 				.add( new TG.SinX().frequency( 0.004 ) )
 				.mul( new TG.SinY().frequency( 0.004 ) )
-				.mul( new TG.SinX().offset( 32 ).frequency( 0.02 ) )
 				.mul( new TG.SinY().offset( 32 ).frequency( 0.02 ) )
-				.div( new TG.SinX().frequency( 0.02 ).color( 5, 4, 3 ) )
-				.mul( new TG.SinX().frequency( 0.003 ).color( 0.5, 0, 0 ) )
+				.div( new TG.SinX().frequency( 0.02 ).color( 8, 5, 4 ) )
 				.add( new TG.Noise().color( 0.1, 0, 0 ) )
 				.add( new TG.Noise().color( 0, 0.1, 0 ) )
 				.add( new TG.Noise().color( 0, 0, 0.1 ) )
