--- a/examples/index.html
+++ b/examples/index.html
@@ -181,7 +181,7 @@
 			//
 
 			var texture = new TG.Texture( 256, 256 )
-				.add( new TG.CheckerBoard() )
+				.add( new TG.CheckerBoard().color( 1, 1, 0 ) )
 				.set( new TG.Transform().offset( 10, 20 ).angle( 23 ).scale( 2, 0.5 ) )
 				.toCanvas();
 
