TG.Circle inverse

--- a/examples/index.html
+++ b/examples/index.html
@@ -172,7 +172,7 @@
 			//
 
 			var texture = new TG.Texture( 256, 256 )
-			.add( new TG.Circle().position( 128, 128 ).radius( 64 ).delta( 60 ) )
+			.add( new TG.Circle().position( 128, 128 ).radius( 64 ).delta( 60 ).color( 1, 0.25, 0.25 ) )
 			.set( new TG.Pixelate().size( 8, 8 ) )
 			.toCanvas();
 
