--- a/examples/index.html
+++ b/examples/index.html
@@ -206,6 +206,29 @@
 
 			document.body.appendChild( texture );
 
+			//
+
+			var texture = new TG.Texture( 256, 256 )
+			.add( new TG.Gradient().interpolation( 0 ).addPoint( 0, [1,1,0,0] ).addPoint( 0.25, [0.2,0,0.5,1]).addPoint( 0.5, [0.5,0.2,0.5,1]).addPoint( 1, [1,0,1,1]) )
+			.toCanvas();
+
+			document.body.appendChild( texture );
+
+			//
+
+			var texture = new TG.Texture( 256, 256 )
+			.add( new TG.Gradient().interpolation( 1 ).addPoint( 0, [1,1,0,0] ).addPoint( 0.25, [0.2,0,0.5,1]).addPoint( 0.5, [0.5,0.2,0.5,1]).addPoint( 1, [1,0,1,1]) )
+			.toCanvas();
+
+			document.body.appendChild( texture );
+
+			//
+
+			var texture = new TG.Texture( 256, 256 )
+			.add( new TG.Gradient().interpolation( 2 ).addPoint( 0, [1,1,0,0] ).addPoint( 0.25, [0.2,0,0.5,1]).addPoint( 0.5, [0.5,0.2,0.5,1]).addPoint( 1, [1,0,1,1]) )
+			.toCanvas();
+
+			document.body.appendChild( texture );
 		</script>
 	</body>
 </html>
