--- a/examples/index.html
+++ b/examples/index.html
@@ -234,7 +234,7 @@
 			//
 
 			var texture = new TG.Texture( 256, 256 )
-			.add( new TG.RadialGradient().center( 0, 0 ).radius( 512 ).interpolation( 0 ).point( 0, [1,1,0,0] ).point( 0.25, [0.2,0,0.5,1]).point( 0.5, [0.5,0.2,0.5,1]).point( 1, [1,0,1,1]) )
+			.add( new TG.RadialGradient().center( 128, 128 ).radius( 32 ).repeat( true ).interpolation( 0 ).point( 0, [1,1,0,0] ).point( 0.25, [0.2,0,0.5,1]).point( 0.5, [0.5,0.2,0.5,1]).point( 1, [1,0,1,1]) )
 			.toCanvas();
 
 			document.body.appendChild( texture );
@@ -242,7 +242,7 @@
 			//
 
 			var texture = new TG.Texture( 256, 256 )
-			.add( new TG.RadialGradient().center( 128, 128 ).radius( 64 ).interpolation( 1 ).point( 0, [1,1,0,0] ).point( 0.25, [0.2,0,0.5,1]).point( 0.5, [0.5,0.2,0.5,1]).point( 1, [1,0,1,1]) )
+			.add( new TG.RadialGradient().center( 0, 0 ).radius( 512 ).interpolation( 1 ).point( 0, [1,1,0,0] ).point( 0.25, [0.2,0,0.5,1]).point( 0.5, [0.5,0.2,0.5,1]).point( 1, [1,0,1,1]) )
 			.toCanvas();
 
 			document.body.appendChild( texture );
