--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset='utf-8'>
-		<title>Texgen.js by mrdoob</title>
+		<title>texgen.js - Procedural Texture Generator</title>
 	</head>
 	<body>
 		<header>
