Force white background.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 	<head>
 		<meta charset='utf-8'>
 		<title>texgen.js - Procedural Texture Generator</title>
+		<style>
+			body {
+				background-color: #fff;
+			}
+		</style>
 	</head>
 	<body>
 		<header>
