--- a/examples/noise.html
+++ b/examples/noise.html
@@ -190,21 +190,21 @@
 				new TG.Texture(size, size)
 					.set(new TG.FractalNoise().baseFrequency(64).octaves(6).step(2).interpolation(2) )
 					.sub(new TG.Noise().tint(0, 0.1, 0) )
-					.min(new TG.Number().tint(0, 0.6, 0) )
-					.sub(new TG.Number().tint(0, 0.5, 0) )
-					.mul(new TG.Number().tint(0, 5, 0) )
+					.min(new TG.Fill().tint(0, 0.6, 0) )
+					.sub(new TG.Fill().tint(0, 0.5, 0) )
+					.mul(new TG.Fill().tint(0, 5, 0) )
 					.sub(new TG.SineDistort().sines(2, 2).amplitude(8, 8).tint(0, 0.75, 0) )
-					.add(new TG.Number().tint(0.06, 0, 0.085) )
+					.add(new TG.Fill().tint(0.06, 0, 0.085) )
 					.addToPage("Example 2");
 
 				new TG.Texture(size, size)
 					.set(new TG.FractalNoise().baseFrequency(128).octaves(6).step(2).interpolation(2) )
 					.sub(new TG.Noise().tint(0, 0.1, 0) )
-					.min(new TG.Number().tint(0, 0.63, 0) )
-					.sub(new TG.Number().tint(0, 0.53, 0) )
-					.mul(new TG.Number().tint(0, 6, 0) )
+					.min(new TG.Fill().tint(0, 0.63, 0) )
+					.sub(new TG.Fill().tint(0, 0.53, 0) )
+					.mul(new TG.Fill().tint(0, 6, 0) )
 					.sub(new TG.SineDistort().sines(2, 2).amplitude(4, 4).tint(0, 0.75, 0) )
-					.add(new TG.Number().tint(0.065, 0, 0.095) )
+					.add(new TG.Fill().tint(0.065, 0, 0.095) )
 					.addToPage("Example 2 (less distortion)");
 
 				line = document.createElement("br");
