--- a/examples/animated.html
+++ b/examples/animated.html
@@ -34,7 +34,7 @@
 					.mul( new TG.SinX().frequency( 0.08-i/2000 ) )
 					.add( new TG.SinY().frequency( 0.05-i/1000 ) )
 					.mul( new TG.SinY().frequency( 0.08+i/2000 ) )
-					.div( new TG.Number().tint( 1, 2, 1 ) )
+					.div( new TG.Fill().tint( 1, 2, 1 ) )
 					.add( new TG.SinX().frequency( 0.003 ).tint( 0.5, 0, 0 ) )
 					.toImageData(context);
 
@@ -47,7 +47,7 @@
 					.add( new TG.SinY().frequency( 0.066 + 0.05*Math.sin(i/100) ) )
 					.mul( new TG.SinX().offset( 32 ).frequency( 0.044 + 0.09*Math.sin(i/100) ).tint( 2, 2, 2 ) )
 					.mul( new TG.SinY().offset( 16 ).frequency( 0.044 + 0.09*Math.sin(i/100) ).tint( 2, 2, 2 ) )
-					.sub( new TG.Number().tint( 0.5, 2, 4 ) )
+					.sub( new TG.Fill().tint( 0.5, 2, 4 ) )
 					.toImageData(context);
 
 				context.putImageData( texture, size, 0 );
