--- a/examples/animated.html
+++ b/examples/animated.html
@@ -30,12 +30,12 @@
 			function render() {
 
 				var texture = new TG.Texture( size, size )
-					.add( new TG.SinX().frequency( 0.05+i/1000 ) )
-					.mul( new TG.SinX().frequency( 0.08-i/2000 ) )
-					.add( new TG.SinY().frequency( 0.05-i/1000 ) )
-					.mul( new TG.SinY().frequency( 0.08+i/2000 ) )
+					.add( new TG.SinX().frequency( 2/(0.05+i/1000) ) )
+					.mul( new TG.SinX().frequency( 2/(0.08-i/2000) ) )
+					.add( new TG.SinY().frequency( 2/(0.05-i/1000) ) )
+					.mul( new TG.SinY().frequency( 2/(0.08+i/2000) ) )
 					.div( new TG.Fill().tint( 1, 2, 1 ) )
-					.add( new TG.SinX().frequency( 0.003 ).tint( 0.5, 0, 0 ) )
+					.add( new TG.SinX().frequency( 2/0.003 ).tint( 0.5, 0, 0 ) )
 					.toImageData(context);
 
 				context.putImageData( texture, 0, 0 );
@@ -43,10 +43,10 @@
 				//
 
 				var texture = new TG.Texture( size, size )
-					.add( new TG.SinX().frequency( 0.066 + 0.05*Math.sin(i/100) ) )
-					.add( new TG.SinY().frequency( 0.066 + 0.05*Math.sin(i/100) ) )
-					.mul( new TG.SinX().offset( 32 ).frequency( 0.044 + 0.09*Math.sin(i/100) ).tint( 2, 2, 2 ) )
-					.mul( new TG.SinY().offset( 16 ).frequency( 0.044 + 0.09*Math.sin(i/100) ).tint( 2, 2, 2 ) )
+					.add( new TG.SinX().frequency( 2/(0.066 + 0.05*Math.sin(i/100)) ) )
+					.add( new TG.SinY().frequency( 2/(0.066 + 0.05*Math.sin(i/100)) ) )
+					.mul( new TG.SinX().offset( 32 ).frequency( 2/(0.044 + 0.09*Math.sin(i/100)) ).tint( 2, 2, 2 ) )
+					.mul( new TG.SinY().offset( 16 ).frequency( 2/(0.044 + 0.09*Math.sin(i/100)) ).tint( 2, 2, 2 ) )
 					.sub( new TG.Fill().tint( 0.5, 2, 4 ) )
 					.toImageData(context);
 
@@ -55,10 +55,10 @@
 				//
 
 				var texture = new TG.Texture( size, size )
-					.add( new TG.SinX().frequency( 0.004 + 0.002*Math.sin(i/100)) )
-					.mul( new TG.SinY().frequency( 0.004	+ 0.002*Math.sin(i/100)) )
-					.mul( new TG.SinY().offset( 32 ).frequency( 0.04 + 0.02*Math.sin(i/100) ) )
-					.div( new TG.SinX().frequency( 0.02 ).tint( 8, 5, 4 ) )
+					.add( new TG.SinX().frequency( 2/(0.004 + 0.002*Math.sin(i/100))) )
+					.mul( new TG.SinY().frequency( 2/(0.004	+ 0.002*Math.sin(i/100))) )
+					.mul( new TG.SinY().offset( 32 ).frequency( 2/(0.04 + 0.02*Math.sin(i/100)) ) )
+					.div( new TG.SinX().frequency( 2/0.02 ).tint( 8, 5, 4 ) )
 					.add( new TG.Noise().tint( 0.1, 0, 0 ) )
 					.add( new TG.Noise().tint( 0, 0.1, 0 ) )
 					.add( new TG.Noise().tint( 0, 0, 0.1 ) )
